--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "currency-input": [
+        "dist/currency-input/currency-input",
+        "dist/currency-input"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
